--- a/StudentCourseManagement.Presentation/Views/Student/Create.cshtml
+++ b/StudentCourseManagement.Presentation/Views/Student/Create.cshtml
@@ -6,24 +6,34 @@
 <div class="p-6 space-y-8">
     <h1 class="text-3xl font-bold text-white mb-4">Yeni Öğrenci Ekle</h1>
 
-    <!-- Student Create Form -->
     <div class="bg-gray-800 shadow-md rounded-lg p-6">
         <form asp-action="Create" method="post">
             <div class="mb-4">
                 <label for="FirstName" class="block text-gray-300 text-sm font-bold mb-2">Ad</label>
-                <input asp-for="FirstName" class="bg-gray-700 text-white rounded-lg w-full py-2 px-4 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Öğrenci adı giriniz" />
+                <input asp-for="FirstName" class="bg-gray-700 text-white rounded-lg w-full py-2 px-4 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Öğrenci adı giriniz"/>
                 <span asp-validation-for="FirstName" class="text-red-500 text-sm"></span>
             </div>
 
             <div class="mb-4">
                 <label for="LastName" class="block text-gray-300 text-sm font-bold mb-2">Soyad</label>
-                <input asp-for="LastName" class="bg-gray-700 text-white rounded-lg w-full py-2 px-4 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Öğrenci soyadı giriniz" />
+                <input asp-for="LastName" class="bg-gray-700 text-white rounded-lg w-full py-2 px-4 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Öğrenci soyadı giriniz"/>
                 <span asp-validation-for="LastName" class="text-red-500 text-sm"></span>
+            </div>
+            <div class="mb-4">
+                <label for="Email" class="block text-gray-300 text-sm font-bold mb-2">Email</label>
+                <input asp-for="Email" class="bg-gray-700 text-white rounded-lg w-full py-2 px-4 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Email giriniz"/>
+                <span asp-validation-for="Email" class="text-red-500 text-sm"></span>
+            </div>
+
+            <div class="mb-4">
+                <label for="Password" class="block text-gray-300 text-sm font-bold mb-2">Şifre</label>
+                <input asp-for="Password" type="password" class="bg-gray-700 text-white rounded-lg w-full py-2 px-4 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Şifre giriniz"/>
+                <span asp-validation-for="Password" class="text-red-500 text-sm"></span>
             </div>
 
             <div class="mb-4">
                 <label for="EnrollmentDate" class="block text-gray-300 text-sm font-bold mb-2">Kayıt Tarihi</label>
-                <input asp-for="EnrollmentDate" type="datetime-local" class="bg-gray-700 text-white rounded-lg w-full py-2 px-4 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+                <input asp-for="EnrollmentDate" type="datetime-local" class="bg-gray-700 text-white rounded-lg w-full py-2 px-4 focus:outline-none focus:ring-2 focus:ring-blue-500"/>
                 <span asp-validation-for="EnrollmentDate" class="text-red-500 text-sm"></span>
             </div>
 
